--- a/imports/ui/blog.html
+++ b/imports/ui/blog.html
@@ -17,10 +17,15 @@
 
 <template name="addBlog">
   <form>
-    <p>Create a blog post:</p>
-    <input type="text"  name="blogTitle" placeHolder="Title of post...">
-    <br>
-    <br>
-    <textarea name="blogContent" placeHolder="Content of post..."></textarea>
+    <h3>Create a blog post</h3>
+    <div class="form-group">
+      <label for="blogTitle">Title:</label>
+      <input type="text" class="form-control" name="blogTitle" placeHolder="Title of post...">
+    </div>
+    <div class="form-group">
+      <label for="blogTitle">Title:</label>
+      <textarea class="form-control" rows="5" name="blogContent" placeHolder="Content of post..."></textarea>
+    </div>
+    <button type="submit" class="btn btn-default">Submit</button>
   </form>
 </template>
