Add user authentication

--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -11,8 +11,9 @@
         <li><a href="#">Page 3</a></li> 
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-user"></span> 
+        {{> loginButtons align="right"}}
+        </a></li>
       </ul>
     </div>
   </nav>
