Add author to blog post

--- a/imports/ui/blog.html
+++ b/imports/ui/blog.html
@@ -10,7 +10,7 @@
 <template name="blogItem">
   <li>
     <h2>{{title}}</h2>
-    <p>by {{createdBy}}</p>
+    <p>by {{author}}</p>
     <p>{{content}}</p>
     <button type="button" class="btn btn-info">Edit</button>
     <button type="button" class="delete-blog btn btn-danger">Delete</button>
