--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -2,15 +2,10 @@
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">WebSiteName</a>
+        <a class="navbar-brand" href="{{pathFor route='home'}}">METEOR BLOG</a>
       </div>
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Page 1</a></li>
-        <li><a href="#">Page 2</a></li> 
-        <li><a href="#">Page 3</a></li> 
-      </ul>
       <ul class="nav navbar-nav navbar-right">
+        <li><a href="{{pathFor route='myBlogs'}}">My Blogs</a></li>
         <li><a href="#"><span class="glyphicon glyphicon-user"></span> 
         {{> loginButtons align="right"}}
         </a></li>
