--- a/imports/ui/blog.html
+++ b/imports/ui/blog.html
@@ -45,6 +45,7 @@
     <h3>{{title}}</h3>
     <p>by {{author}}</p>
     <p>{{content}}</p>
+    <a href="/myBlog/{{_id}}" class="btn btn-info">Edit</a>
     <button type="button" class="delete-blog btn btn-danger">Delete</button>
   </li>
 </template>
@@ -59,6 +60,21 @@
     <div class="form-group">
       <label for="blogTitle">Content:</label>
       <textarea class="form-control" rows="5" name="blogContent" placeHolder="Content of post..."></textarea>
+    </div>
+    <button type="submit" class="btn btn-success">Submit</button>
+  </form>
+</template>
+
+<template name="editBlog">
+  <form>
+    <h3>Create a blog post</h3>
+    <div class="form-group">
+      <label for="blogTitle">Title:</label>
+      <input type="text" class="form-control" name="blogTitle" value="{{title}}">
+    </div>
+    <div class="form-group">
+      <label for="blogTitle">Content:</label>
+      <textarea class="form-control" rows="5" name="blogContent" value="{{content}}"></textarea>
     </div>
     <button type="submit" class="btn btn-success">Submit</button>
   </form>
