--- a/imports/ui/blog.html
+++ b/imports/ui/blog.html
@@ -55,11 +55,11 @@
     <h3>Create a blog post</h3>
     <div class="form-group">
       <label for="blogTitle">Title:</label>
-      <input type="text" class="form-control" name="blogTitle" placeHolder="Title of post...">
+      <input type="text" class="form-control" name="blogTitle" placeHolder="Title of post..." required>
     </div>
     <div class="form-group">
       <label for="blogTitle">Content:</label>
-      <textarea class="form-control" rows="5" name="blogContent" placeHolder="Content of post..."></textarea>
+      <textarea class="form-control" rows="5" name="blogContent" placeHolder="Content of post..." required></textarea>
     </div>
     <button type="submit" class="btn btn-success">Submit</button>
   </form>
@@ -70,11 +70,11 @@
     <h3>Create a blog post</h3>
     <div class="form-group">
       <label for="blogTitle">Title:</label>
-      <input type="text" class="form-control" name="blogTitle" value="{{title}}">
+      <input type="text" class="form-control" name="blogTitle" value="{{title}}" required>
     </div>
     <div class="form-group">
       <label for="blogTitle">Content:</label>
-      <textarea class="form-control" rows="5" name="blogContent" value="{{content}}"></textarea>
+      <textarea class="form-control" rows="5" name="blogContent" value="{{content}}" required></textarea>
     </div>
     <button type="submit" class="btn btn-success">Submit</button>
   </form>
